Added reflection and renamed parameter resources

--- a/src/main/resources/model/Parameter.properties
+++ b/src/main/resources/model/Parameter.properties
@@ -1,4 +1,4 @@
-# Maps a command to the number of commands that it takes.
+# Maps a command to the number of parameters that it takes.
 #
 # Turtle Commands
 #
