Added pi command

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -45,15 +45,15 @@ Pi=slogo.model.command.math.Pi
 #
 # Boolean Operations
 #
-LessThan=slogo.model.command.boolean.LessThan
-LessEqual=slogo.model.command.boolean.LessEqual
-GreaterThan=slogo.model.command.boolean.GreaterThan
-GreaterEqual=slogo.model.command.boolean.GreaterEqual
-Equal=slogo.model.command.boolean.Equal
-NotEqual=slogo.model.command.boolean.NotEqual
-And=slogo.model.command.boolean.And
-Or=slogo.model.command.boolean.Or
-Not=slogo.model.command.boolean.Not
+LessThan=slogo.model.command.bool.LessThan
+LessEqual=slogo.model.command.bool.LessEqual
+GreaterThan=slogo.model.command.bool.GreaterThan
+GreaterEqual=slogo.model.command.bool.GreaterEqual
+Equal=slogo.model.command.bool.Equal
+NotEqual=slogo.model.command.bool.NotEqual
+And=slogo.model.command.bool.And
+Or=slogo.model.command.bool.Or
+Not=slogo.model.command.bool.Not
 #
 # Variables, Control, and User-Defined Commands
 #
