Added Make command reflective properties

--- a/src/main/resources/model/Parameter.properties
+++ b/src/main/resources/model/Parameter.properties
@@ -58,9 +58,9 @@ Not=1
 # Variables, Control, and User-Defined Commands
 #
 MakeVariable=2
-Repeat=repeat
-DoTimes=dotimes
-For=for
-If=if
-IfElse=ifelse
-MakeUserInstruction=to
+Repeat=1
+DoTimes=0
+For=0
+If=1
+IfElse=1
+MakeUserInstruction=0
