--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -57,7 +57,7 @@ Not=slogo.model.command.bool.Not
 #
 # Variables, Control, and User-Defined Commands
 #
-MakeVariable=2
+MakeVariable=slogo.model.command.control.Make
 Repeat=repeat
 DoTimes=dotimes
 For=for
