added button properties

--- a/src/main/resources/view/EnglishButtons.properties
+++ b/src/main/resources/view/EnglishButtons.properties
@@ -1,1 +1,6 @@
-Run=run
+run = run
+close = close
+help = help
+set_image = set image
+set_bk_color = set background color
+set_pen_color = set pen color
