Added reflective class paths to properties

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -58,9 +58,9 @@ Not=slogo.model.command.bool.Not
 # Variables, Control, and User-Defined Commands
 #
 MakeVariable=slogo.model.command.control.Make
-Repeat=repeat
-DoTimes=dotimes
-For=for
-If=if
-IfElse=ifelse
-MakeUserInstruction=to
+Repeat=slogo.model.command.control.Repeat
+DoTimes=slogo.model.command.control.DoTimes
+For=slogo.model.command.control.For
+If=slogo.model.command.control.If
+IfElse=slogo.model.command.control.IfElse
+MakeUserInstruction=slogo.model.command.control.MakeUserInstruction
