--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -1,6 +1,6 @@
-run = run
-close = close
-help = help
-set_image = set image
-set_bk_color = set background color
-set_pen_color = set pen color
+Run = run
+#close = close
+#help = help
+#set_image = set image
+#set_bk_color = set background color
+#set_pen_color = set pen color
