--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -1,6 +1,6 @@
 Run = ejecutar
-#close = cerrar
-#help = ayuda
-#set_image = establecer imagen
-#set_bk_color = establecer el color de fondo
-#set_pen_color = establecer el color de la pluma
+Close = cerrar
+Help = ayuda
+SetImage = establecer imagen
+SetBkColor = establecer el color de fondo
+SetPenColor = establecer el color de la pluma
