--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -4,3 +4,4 @@ Help = ayuda
 SetImage = establecer imagen
 SetBkColor = establecer el color de fondo
 SetPenColor = establecer el color de la pluma
+FileIn = cargar en un archivo
