add turtle query commands

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -18,7 +18,7 @@ ClearScreen=slogo.model.command.turtle.ClearScreen
 #
 # Turtle Queries
 #
-XCoordinate=slogo.model.command.query.XCor
+XCoordinate=slogo.model.command.query.XCoordinate
 YCoordinate=slogo.model.command.query.YCor
 Heading=slogo.model.command.query.Heading
 IsPenDown=slogo.model.command.query.IsPenDown
