added spawn turtle button

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -5,4 +5,5 @@ SetImage = set image
 SetBkColor = set background color
 SetPenColor = set pen color
 FileIn = load in a file
+SpawnTurtle = spawn a new turtle
 
