--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -5,3 +5,4 @@ SetImage = establecer imagen
 SetBkColor = establecer el color de fondo
 SetPenColor = establecer el color de la pluma
 FileIn = cargar en un archivo
+SpawnTurtle = engendrar una nueva tortuga
