got some version of filewriting done

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -6,4 +6,5 @@ SetBkColor = set background color
 SetPenColor = set pen color
 FileIn = load in a file
 SpawnTurtle = spawn a new turtle
+CommandHistoryOut = save command history
 
