--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -6,3 +6,4 @@ SetBkColor = establecer el color de fondo
 SetPenColor = establecer el color de la pluma
 FileIn = cargar en un archivo
 SpawnTurtle = engendrar una nueva tortuga
+CommandHistoryOut =guardar el historial de comandos
