added turtle animation controller button - perhaps zach can get cracking on this

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -7,4 +7,5 @@ SetPenColor = set pen color
 FileIn = load in a file
 SpawnTurtle = spawn a new turtle
 CommandHistoryOut = save command history
+OpenTurtleAnimationController = open turtle animation controller
 
