--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -7,3 +7,4 @@ SetPenColor = establecer el color de la pluma
 FileIn = cargar en un archivo
 SpawnTurtle = engendrar una nueva tortuga
 CommandHistoryOut =guardar el historial de comandos
+OpenTurtleAnimationController = abre el controlador de animación de la tortuga
