Adding and setting turtle image functionality added

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -2,6 +2,7 @@ Run = run
 Close = close
 Help = help
 SetImage = set image
+AddImage = add image
 SetBkColor = set background color
 SetPenColor = set pen color
 FileIn = load in a file
