made ability to save variable and command text - note, made a constant in parser public to allow to format string to be able to be run in any language

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -9,4 +9,5 @@ FileIn = load in a file
 SpawnTurtle = spawn a new turtle
 CommandHistoryOut = save command history
 OpenTurtleAnimationController = open turtle animation controller
+VariablesAndCommandsOut = save user-defined variables and commands
 
