--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -8,3 +8,4 @@ FileIn = cargar en un archivo
 SpawnTurtle = engendrar una nueva tortuga
 CommandHistoryOut =guardar el historial de comandos
 OpenTurtleAnimationController = abre el controlador de animación de la tortuga
+VariablesAndCommandsOut = guardar variables y comandos definidos por el usuario
