Implemented Tell Commnad

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -64,3 +64,21 @@ For=slogo.model.command.control.For
 If=slogo.model.command.control.If
 IfElse=slogo.model.command.control.IfElse
 MakeUserInstruction=slogo.model.command.control.MakeUserInstruction
+#
+# Display Commands
+#
+SetBackground=setbackground|setbg
+SetPenColor=setpencolor|setpc
+SetPenSize=setpensize|setps
+SetShape=setshape|setsh
+SetPalette=setpalette
+GetPenColor=pencolor|pc|GetPenColor
+GetShape=shape|sh
+#
+# Multiple Turtle Commands
+#
+ID=id
+Turtles=turtles
+Tell=slogo.model.command.multi.Tell
+Ask=ask
+AskWith=askwith
