Added ID Command

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -77,7 +77,7 @@ GetShape=shape|sh
 #
 # Multiple Turtle Commands
 #
-ID=id
+ID=slogo.model.command.multi.ID
 Turtles=turtles
 Tell=slogo.model.command.multi.Tell
 Ask=ask
