Added multi turtle unit tests

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -78,7 +78,7 @@ GetShape=shape|sh
 # Multiple Turtle Commands
 #
 ID=slogo.model.command.multi.ID
-Turtles=turtles
+Turtles=slogo.model.command.multi.Turtles
 Tell=slogo.model.command.multi.Tell
-Ask=ask
-AskWith=askwith
+Ask=slogo.model.command.multi.Ask
+AskWith=slogo.model.command.multi.AskWith
