Fixed reflection filepaths

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -45,9 +45,9 @@ Pi=slogo.model.command.math.Pi
 #
 # Boolean Operations
 #
-LessThan=slogo.model.command.bool.LessThan
+LessThan=slogo.model.command.bool.Less
 LessEqual=slogo.model.command.bool.LessEqual
-GreaterThan=slogo.model.command.bool.GreaterThan
+GreaterThan=slogo.model.command.bool.Greater
 GreaterEqual=slogo.model.command.bool.GreaterEqual
 Equal=slogo.model.command.bool.Equal
 NotEqual=slogo.model.command.bool.NotEqual
