added create new workspace functionality

--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -10,4 +10,5 @@ SpawnTurtle = spawn a new turtle
 CommandHistoryOut = save command history
 OpenTurtleAnimationController = open turtle animation controller
 VariablesAndCommandsOut = save user-defined variables and commands
+CreateNewWorkspace = create a new workspace
 
