--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -9,3 +9,4 @@ SpawnTurtle = engendrar una nueva tortuga
 CommandHistoryOut =guardar el historial de comandos
 OpenTurtleAnimationController = abre el controlador de animación de la tortuga
 VariablesAndCommandsOut = guardar variables y comandos definidos por el usuario
+CreateNewWorkspace = crear un nuevo espacio de trabajo
