--- a/src/main/resources/view/buttons/English.properties
+++ b/src/main/resources/view/buttons/English.properties
@@ -11,4 +11,5 @@ CommandHistoryOut = save command history
 OpenTurtleAnimationController = open turtle animation controller
 VariablesAndCommandsOut = save user-defined variables and commands
 CreateNewWorkspace = create a new workspace
+OpenClickToExecute = open click-to-execute GUI
 
