--- a/src/main/resources/view/buttons/Spanish.properties
+++ b/src/main/resources/view/buttons/Spanish.properties
@@ -10,3 +10,4 @@ CommandHistoryOut =guardar el historial de comandos
 OpenTurtleAnimationController = abre el controlador de animación de la tortuga
 VariablesAndCommandsOut = guardar variables y comandos definidos por el usuario
 CreateNewWorkspace = crear un nuevo espacio de trabajo
+OpenClickToExecute = abrir clic-para-ejecutar GUI
