Added display commands to compiler

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -67,12 +67,12 @@ MakeUserInstruction=slogo.model.command.control.MakeUserInstruction
 #
 # Display Commands
 #
-SetBackground=setbackground|setbg
-SetPenColor=setpencolor|setpc
-SetPenSize=setpensize|setps
+SetBackground=slogo.model.command.display.SetBackground
+SetPenColor=slogo.model.command.display.SetPenColor
+SetPenSize=slogo.model.command.turtle.SetPenSize
 SetShape=setshape|setsh
-SetPalette=setpalette
-GetPenColor=pencolor|pc|GetPenColor
+SetPalette=slogo.model.command.display.SetPalette
+GetPenColor=slogo.model.command.display.GetPenColor
 GetShape=shape|sh
 #
 # Multiple Turtle Commands
