Added extended syntax commands

--- a/src/main/resources/model/Reflection.properties
+++ b/src/main/resources/model/Reflection.properties
@@ -70,10 +70,10 @@ MakeUserInstruction=slogo.model.command.control.MakeUserInstruction
 SetBackground=slogo.model.command.display.SetBackground
 SetPenColor=slogo.model.command.display.SetPenColor
 SetPenSize=slogo.model.command.turtle.SetPenSize
-SetShape=setshape|setsh
+SetShape=slogo.model.command.turtle.SetShape
 SetPalette=slogo.model.command.display.SetPalette
 GetPenColor=slogo.model.command.display.GetPenColor
-GetShape=shape|sh
+GetShape=slogo.model.command.turtle.GetShape
 #
 # Multiple Turtle Commands
 #
