refactored into DataSection with 3 subsections - passing it off to jake to implement the turtle and colors section

--- a/src/main/resources/view/defaultIdeText/Spanish.properties
+++ b/src/main/resources/view/defaultIdeText/Spanish.properties
@@ -1,3 +1,4 @@
 Variables= Variables: 
 Commands= Comandos Definidos por el Usuario 
 History= Comandos Pasados:
+TurtleColors = Colores ds Tortugas:
