Implemented implicit variables (:repcount)

--- a/src/main/resources/model/Constructor.properties
+++ b/src/main/resources/model/Constructor.properties
@@ -58,7 +58,7 @@ Not=makeArgCommand
 # Variables, Control, and User-Defined Commands
 #
 MakeVariable=makeArgCommand
-Repeat=makeListCommand
+Repeat=makeListImplicitCommand
 DoTimes=makeListCommand
 For=makeListCommand
 If=makeListCommand
