make GUI display color palette and current turtle indices on side bar

--- a/src/main/resources/view/defaultIdeText/English.properties
+++ b/src/main/resources/view/defaultIdeText/English.properties
@@ -1,4 +1,5 @@
 Variables=Variables: 
 Commands=User-Defined Commands: 
-History= Past Commands:
-ColorPalette = Color Palette:
+History= Past Commands: 
+ColorPalette = Color Palette: 
+Turtles = Turtles: 
