--- a/src/main/resources/view/defaultIdeText/Spanish.properties
+++ b/src/main/resources/view/defaultIdeText/Spanish.properties
@@ -1,4 +1,5 @@
 Variables= Variables: 
 Commands= Comandos Definidos por el Usuario 
-History= Comandos Pasados:
-TurtleColors = Colores ds Tortugas:
+History= Comandos Pasados: 
+ColorPalette = Paleta de Color: 
+Turtles = Tortugas: 
